--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "ftp": "^0.3.10"
+    "ftp": "^0.3.10",
+    "chalk": "^4.1.2"
   }
 }
