--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.18.1",
-    "ftp": "^0.3.10",
-    "chalk": "^4.1.2"
+    "ftp": "^0.3.10"
   }
 }
